[tool.poetry]
name = "Handler"
version = "0.8.3"
description = "Package for abstracting file system handler in an oriented-object style."
authors = ["Gabriel <contato@gabrielfontenelle.com>"]
license = "GNU GENERAL PUBLIC LICENSE v3"
packages = [
    { include = "handler" },
]
include = [
    "handler/data/mime.types",
    "TODO",
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.7"
pytest-shutil = "^1.7.0"
pytest = "^6.2.1"
Send2Trash = "^1.5.0"
psutil = "^5.8.0"
py7zr = "^0.20"
tinytag = "1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
